--- a/index.css
+++ b/index.css
@@ -1,7 +1,7 @@
 
    body {
     font-family: Arial, sans-serif;
-    background: linear-gradient(45deg, #ff9a9e, #fad0c4, #a18cd1, #fbc2eb, #8ec5fc, #f093fb, #f093fb);
+    background: linear-gradient(45deg, #ff9a9e, #fad0c4, #a18cd1, #fbc2eb, #8ec5fc, #f093fb, #f093fb) fixed;
   }
   
   h1 {
